testdata/baselines/reference/submodule/conformance/jsdocTypeReferenceExports.errors.txt
bug27342.js(3,11): error TS2709: Cannot use namespace 'exports' as a type.
bug27342.js(3,11): error TS8010: Type annotations can only be used in TypeScript files.


==== bug27342.js (2 errors) ====
    module.exports = {}
    /**
     * @type {exports}
              ~~~~~~~
!!! error TS2709: Cannot use namespace 'exports' as a type.
              ~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    var x
    
    